--- a/.htaccess
+++ b/.htaccess
@@ -1,5 +1,8 @@
 Options -Indexes 
 ErrorDocument 404 /404.php
+
+Header set X-Content-Type-Options "nosniff"
+
 <IfModule mod_php5.c>
   php_flag session.use_trans_sid off
   #php_flag default_charset UTF-8
