--- a/.htaccess
+++ b/.htaccess
@@ -1,7 +1,10 @@
 Options -Indexes 
 ErrorDocument 404 /404.php
 
-Header set X-Content-Type-Options "nosniff"
+
+php_flag short_open_tag on
+php_value mbstring.func_overload 2
+php_value mbstring.internal_encoding UTF-8
 
 <IfModule mod_php5.c>
   php_flag session.use_trans_sid off
